--- a/Javascript/DOM/dom.html
+++ b/Javascript/DOM/dom.html
@@ -7,6 +7,12 @@
 </head>
 <body style="background-color: gray;">
     <h1 id="textoSaludo"><span>Holiwis</span></h1>
+    
+    <section id="content">
+
+    </section>
+
+    <button id="btnMagia">MAGIA</button>
 
     <script src="./dom.js"></script>
 </body>
