Eventos - Solucion Reto Array - Clase 5/9/24

--- a/Javascript/DOM/dom.html
+++ b/Javascript/DOM/dom.html
@@ -12,7 +12,12 @@
 
     </section>
 
+    <input type="text" id="inputText" onchange="cambiandoInput(event)">
+    
+
     <button id="btnMagia">MAGIA</button>
+
+    <button onclick="apretandoBoton()" >APRETAME</button>
 
     <script src="./dom.js"></script>
 </body>
